[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/images/wu.png" type="Texture" id=1]
[ext_resource path="res://scripts/entities/UpdatedPlayerController.gd" type="Script" id=2]
[ext_resource path="res://scripts/entities/PlayerAnimations.gd" type="Script" id=3]
[ext_resource path="res://shaders/Shader002.tscn" type="PackedScene" id=4]
[ext_resource path="res://shaders/Shader001.tscn" type="PackedScene" id=5]
[ext_resource path="res://shaders/Shader003bg.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle_downwards"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=12]
resource_name = "idle_left"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=13]
resource_name = "idle_right"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=14]
resource_name = "idle_upwards"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk_downwards"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk_left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk_right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 7 ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk_upwards"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 10 ]
}

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "idle_downwards"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "idle_upwards"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id=8]
blend_point_0/node = SubResource( 15 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 16 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 17 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 18 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "walk_downwards"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "walk_upwards"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id=23]
blend_point_0/node = SubResource( 19 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 20 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 21 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 22 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="GDScript" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
script = SubResource( 26 )

[sub_resource type="AnimationNodeStateMachine" id=9]
states/Idle/node = SubResource( 8 )
states/Idle/position = Vector2( 146, 37 )
states/Walk/node = SubResource( 23 )
states/Walk/position = Vector2( 456, 43 )
transitions = [ "Idle", "Walk", SubResource( 24 ), "Walk", "Idle", SubResource( 25 ) ]
start_node = "Idle"
graph_offset = Vector2( -189, -65 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[node name="Player" type="KinematicBody2D" groups=["Player"]]
pause_mode = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -32, -64 )
texture = ExtResource( 1 )
centered = false
hframes = 3
vframes = 4

[node name="RayCast2D_Down" type="RayCast2D" parent="."]
position = Vector2( 16, 48 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 16 )
collision_mask = 2

[node name="RayCast2D_Right" type="RayCast2D" parent="."]
position = Vector2( 16, 48 )
enabled = true
exclude_parent = false
cast_to = Vector2( 16, 0 )
collision_mask = 2

[node name="RayCast2D_Left" type="RayCast2D" parent="."]
position = Vector2( 16, 48 )
enabled = true
exclude_parent = false
cast_to = Vector2( -16, 0 )
collision_mask = 2

[node name="RayCast2D_Forward" type="RayCast2D" parent="."]
position = Vector2( 16, 48 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, -16 )
collision_mask = 2

[node name="RayCast2D_Area_Down" type="RayCast2D" parent="."]
position = Vector2( 16, 48 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 16 )
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D_Area_Right" type="RayCast2D" parent="."]
position = Vector2( 16, 48 )
enabled = true
exclude_parent = false
cast_to = Vector2( 16, 0 )
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D_Area_Left" type="RayCast2D" parent="."]
position = Vector2( 16, 48 )
enabled = true
exclude_parent = false
cast_to = Vector2( -16, 0 )
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D_Area_Forward" type="RayCast2D" parent="."]
position = Vector2( 16, 48 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, -16 )
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="CanvasLayer" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CanvasLayer2" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Shader003bg" parent="." instance=ExtResource( 6 )]
layer = -10

[node name="Cam" type="Camera2D" parent="."]
current = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["Player"]]
position = Vector2( 16, 48 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 16, 48 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/idle_downwards = SubResource( 11 )
anims/idle_left = SubResource( 12 )
anims/idle_right = SubResource( 13 )
anims/idle_upwards = SubResource( 14 )
anims/walk_downwards = SubResource( 4 )
anims/walk_left = SubResource( 5 )
anims/walk_right = SubResource( 6 )
anims/walk_upwards = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 10 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( 0, 0 )
script = ExtResource( 3 )
